--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,3 @@
-/* Variables de colores */
 :root {
     --marmol-blanco: #F0F0F0;  /* Blanco mármol */
     --marmol-beige: #D4C2A5;   /* Beige mármol */
@@ -46,7 +45,6 @@ nav a:hover {
     color: var(--gris-claro);  /* Gris claro */
 }
 
-/* Centrando el container y agrandando la imagen */
 .section-centrada .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -54,11 +52,11 @@ nav a:hover {
 
 .img-agrandada {
     width: 100%;
-    max-width: 600px; /* Ajusta según sea necesario */
+    background-color: var(--marmol-blanco);
+    max-width: 400px; 
     height: auto;
 }
 
-/* Mejorando el texto */
 .text-mejorado {
     font-family: 'Georgia', serif;
     color: #081c15;
@@ -76,16 +74,3 @@ nav a:hover {
     margin-bottom: 1.5rem;
 }
 
-/* Animaciones */
-.animacion-container {
-    opacity: 0;
-    transform: translateX(-50px);
-    animation: aparecer 1s forwards;
-}
-
-@keyframes aparecer {
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
