--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -8,16 +8,31 @@
 }
 
 header {
-    background-color: var(--gris-oscuro); /* Gris oscuro */
-    color: var(--marmol-beige); /* Beige mármol */
-    padding: 20px 0;
+    background-color: var(--gris-oscuro); 
+    color: var(--marmol-beige); 
+    padding: 30px 0;
     text-align: center;
 }
 
 header h1 {
     margin: 0;
-    font-size: 2.5em;
+    font-size: 3em; 
+    font-family: 'Playfair Display', serif; 
+    text-transform: uppercase;
+    letter-spacing: 2px; 
+    color: var(--marmol-blanco); 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
 }
+
+.sub {
+    margin-top: -25px; 
+    font-size: 1.5em; 
+    font-family: 'Lora', serif; 
+    font-style: italic;
+    color: var(--marmol-beige); 
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); 
+}
+
 
 nav ul {
     list-style: none;
@@ -41,7 +56,11 @@ nav ul li a {
 /* Estilos responsivos */
 @media (max-width: 768px) {
     header h1 {
-        font-size: 1.8em;
+        font-size: 2.2em;
+    }
+
+    .sub {
+        font-size: 1.2em;
     }
 
     nav ul {
