--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -79,6 +79,14 @@ footer {
     color: var(--marmol-blanco); /* Mármol Blanco */
 }
 
+#main-footer::before, #main-footer::after {
+    content: '';
+    position: absolute;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    animation: float 6s ease-in-out infinite;
+}
+
 @media (max-width: 768px) {
     .footer-container {
         flex-direction: column;
