--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -86,6 +86,15 @@ footer {
     border-radius: 50%;
     animation: float 6s ease-in-out infinite;
 }
+.metodo-pago{
+    height: 69px;
+    margin-right: -50%;
+}
+
+.metodo-pago2{
+    height: 100px;
+    width: 500px;
+}
 
 @media (max-width: 768px) {
     .footer-container {
