--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,14 +77,12 @@ nav a:hover {
 /* Bienvenidos */
 .hero-section {
     position: relative;
-    background-image: url(''); /* Reemplaza 'fondo-marmoleria.jpg' con la ruta de tu imagen */
+    background-image: url('https://tse4.mm.bing.net/th?id=OIP.SUG0WYdODdJfAux-rtt6nAHaEA&pid=Api&P=0&h=180'); /* Reemplaza 'fondo-marmoleria.jpg' con la ruta de tu imagen */
     background-size: cover;
     background-position: center;
     padding: 100px 20px;
     color: #ffffff;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7); /* Sombra para que el texto resalte */
-    border-radius: 20px; /* Bordes redondeados */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); /* Sombra para el contenedor */
     overflow: hidden;
     z-index: 1;
 }
