--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,7 +77,7 @@ nav a:hover {
 /* Bienvenidos */
 .hero-section {
     position: relative;
-    background-image: url('https://tse4.mm.bing.net/th?id=OIP.SUG0WYdODdJfAux-rtt6nAHaEA&pid=Api&P=0&h=180'); /* Reemplaza 'fondo-marmoleria.jpg' con la ruta de tu imagen */
+    background-image: url('https://images.pexels.com/photos/2341290/pexels-photo-2341290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Reemplaza 'fondo-marmoleria.jpg' con la ruta de tu imagen */
     background-size: cover;
     background-position: center;
     padding: 100px 20px;
