--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -75,41 +75,42 @@ nav a:hover {
 }
 
 /* Bienvenidos */
+/* Hero Section */
 .hero-section {
     position: relative;
-    background-image: url('https://images.pexels.com/photos/2341290/pexels-photo-2341290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Reemplaza 'fondo-marmoleria.jpg' con la ruta de tu imagen */
+    background-image: url('https://images.pexels.com/photos/2341290/pexels-photo-2341290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-size: cover;
     background-position: center;
-    padding: 100px 20px;
-    color: #ffffff;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7); /* Sombra para que el texto resalte */
+    padding: 60px 20px; /* Reducimos el padding para hacerla más delgada */
+    color: #F0F0F0; /* Blanco mármol */
+    text-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
     overflow: hidden;
     z-index: 1;
 }
 
 .hero-overlay {
-    background: rgba(8, 28, 21, 0.6); /* Superposición oscura para mejorar la legibilidad */
-    padding: 40px;
-    border-radius: 15px;
-    animation: fadeIn 2s ease-in-out; /* Animación de entrada */
+    background: rgba(74, 74, 74, 0.7); /* Gris oscuro semi-transparente */
+    padding: 30px; /* Reducido para mejorar la proporción */
+    border-radius: 10px;
+    animation: fadeIn 2s ease-in-out;
 }
 
 .hero-title {
     font-family: 'Georgia', serif;
-    font-size: 3rem;
-    margin-bottom: 20px;
+    font-size: 2.5rem; /* Reducción del tamaño de la fuente */
+    margin-bottom: 10px;
     text-transform: uppercase;
-    letter-spacing: 3px;
-    color: #74c69d;
-    animation: slideInFromLeft 1.5s ease-out; /* Animación para hacer que el título aparezca desde la izquierda */
+    letter-spacing: 2px;
+    color: #D4C2A5; /* Beige mármol */
+    animation: slideInFromTop 1.5s ease-out;
 }
 
 .hero-subtitle {
     font-family: 'Arial', sans-serif;
-    font-size: 1.5rem;
-    margin-bottom: 15px;
-    color: #b7e4c7;
-    animation: slideInFromRight 1.5s ease-out; /* Animación para hacer que el subtítulo aparezca desde la derecha */
+    font-size: 1.3rem; /* Reducción del tamaño de la fuente */
+    margin-bottom: 10px;
+    color: #B8B8B8; /* Gris claro */
+    animation: fadeInUp 1.5s ease-out;
 }
 
 /* Animaciones */
@@ -122,24 +123,24 @@ nav a:hover {
     }
 }
 
-@keyframes slideInFromLeft {
+@keyframes slideInFromTop {
     from {
-        transform: translateX(-100%);
+        transform: translateY(-50%);
         opacity: 0;
     }
     to {
-        transform: translateX(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
 
-@keyframes slideInFromRight {
+@keyframes fadeInUp {
     from {
-        transform: translateX(100%);
+        transform: translateY(20%);
         opacity: 0;
     }
     to {
-        transform: translateX(0);
+        transform: translateY(0);
         opacity: 1;
     }
 }
