--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -75,41 +75,40 @@ nav a:hover {
 }
 
 /* Bienvenidos */
-/* Hero Section */
 .hero-section {
     position: relative;
     background-image: url('https://images.pexels.com/photos/2341290/pexels-photo-2341290.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-size: cover;
     background-position: center;
-    padding: 60px 20px; /* Reducimos el padding para hacerla más delgada */
-    color: #F0F0F0; /* Blanco mármol */
+    padding: 60px 20px; 
+    color: var(--marmol-blanco); 
     text-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
     overflow: hidden;
     z-index: 1;
 }
 
 .hero-overlay {
-    background: rgba(74, 74, 74, 0.7); /* Gris oscuro semi-transparente */
-    padding: 30px; /* Reducido para mejorar la proporción */
+    background: rgba(74, 74, 74, 0.7); 
+    padding: 30px; 
     border-radius: 10px;
     animation: fadeIn 2s ease-in-out;
 }
 
 .hero-title {
     font-family: 'Georgia', serif;
-    font-size: 2.5rem; /* Reducción del tamaño de la fuente */
+    font-size: 2.5rem; 
     margin-bottom: 10px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #D4C2A5; /* Beige mármol */
+    color: var(--marmol-beige); 
     animation: slideInFromTop 1.5s ease-out;
 }
 
 .hero-subtitle {
     font-family: 'Arial', sans-serif;
-    font-size: 1.3rem; /* Reducción del tamaño de la fuente */
+    font-size: 1.3rem; 
     margin-bottom: 10px;
-    color: #B8B8B8; /* Gris claro */
+    color: var(--gris-claro); 
     animation: fadeInUp 1.5s ease-out;
 }
 
