--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -315,8 +315,60 @@ nav a:hover {
 
 /*Catalogo*/
 
-.img-catalogo{
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
+#catalog-container {
+    padding: 20px;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+#filters {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#filters button {
+    background-color: var(--gris-claro);
+    border: 1px solid var(--marmol-beige);
+    padding: 10px 20px;
+    margin: 0 5px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#filters button:hover {
+    background-color: var(--marmol-beige);
+    color: var(--blanco-puro);
+}
+
+.catalog-items {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    margin-bottom: 150px; /* Margen inferior para evitar superposición del footer */
+}
+
+.catalog-item {
+    background-color: var(--gris-claro);
+    border: 1px solid var(--marmol-beige);
+    border-radius: 10px;
+    padding: 15px;
+    text-align: center;
+}
+
+.catalog-item img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.catalog-item h3 {
+    font-size: 1.2rem;
+    margin-top: 10px;
+    color: var(--marmol-beige);
+}
+
+.catalog-item p {
+    font-size: 0.9rem;
+    color: var(--marmol-blanco);
 }
