ultimo update leder

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -160,7 +160,7 @@ nav a:hover {
     background-image: url('../img/fono-servicio.jpg'); 
     background-size: cover; /* Ajusta la imagen para que cubra toda la sección */
     background-position: center center; /* Centra la imagen */
-    background-attachment: fixed; /* Mantiene la imagen fija mientras se desplaza */
+    /*background-attachment: fixed; /* Mantiene la imagen fija mientras se desplaza */
     padding: 50px 20px;
     color: var(--gris-oscuro); 
     text-align: center;
